tests/snapshots/findings_overlay__callers_markdown_show_findings.snap
---
source: tests/findings_overlay.rs
expression: out
---
### Callers

No callers found across 1 target.

#### Findings (blast radius)

  .github/workflows/ci.yml
    - [zizmor/medium] artipacked (L11)
    - [zizmor/high] template-injection (L14)
    - [zizmor/high] unpinned-uses (L12)
    - [zizmor/high] unpinned-uses (L16)
