tests/snapshots/findings_overlay__callers_text_show_findings_orphan_target.snap
---
source: tests/findings_overlay.rs
expression: out
---
callers  no callers found  (1 targets)

FINDINGS (BLAST RADIUS)
  .github/actions/orphan-tool
    - [zizmor/high] template-injection (L10)
    - [zizmor/high] unpinned-uses (L7)
