tests/snapshots/findings_overlay__graph_highlight_findings_markdown.snap
---
source: tests/findings_overlay.rs
expression: out
---
### Graph

```mermaid
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>CI<br/>H:3 M:1"]
end
subgraph pull_request_target
  wf_1__pull_request_target[".github/workflows/pr-target.yml<br/>PR Target<br/>H:4 M:1"]
end
ext_0["actions/checkout@v4"]
ext_1["deploy-org/deploy-action@v2"]
ext_3["some-org/some-action@v1"]
wf_0__push --> ext_0
wf_0__push --> ext_3
wf_1__pull_request_target --> ext_0
wf_1__pull_request_target --> ext_1
style wf_0__push fill:#f8d7da,stroke:#dc3545
style wf_1__pull_request_target fill:#f8d7da,stroke:#dc3545
```
