tests/snapshots/findings_overlay__impact_text_show_findings.snap
---
source: tests/findings_overlay.rs
expression: out
---
impact  no impacted targets

FINDINGS ON IMPACTED PATHS
  .github/workflows/ci.yml
    - [zizmor/medium] artipacked (L11)
    - [zizmor/high] template-injection (L14)
    - [zizmor/high] unpinned-uses (L12)
    - [zizmor/high] unpinned-uses (L16)
